--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2023",
-    "lib": ["dom", "dom.iterable", "ES2023", "esnext"],
+    "target": "es2022",
+    "lib": ["dom", "dom.iterable", "es2022", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
