--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "20.10.4",
     "@types/react": "18.2.42",
+    "@types/react-bootstrap": "^0.32.35",
     "@types/react-dom": "18.2.17",
     "axios": "^1.6.2",
     "eslint": "8.55.0",
