--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@types/node": "20.10.4",
     "@types/react": "18.2.42",
-    "@types/react-bootstrap": "^0.32.35",
     "@types/react-dom": "18.2.17",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "next": "14.0.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
+    "@types/react-bootstrap": "^0.32.35"
   }
 }
