--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "20.10.4",
     "@types/react": "18.2.42",
     "@types/react-dom": "18.2.17",
-    "axios": "^1.6.2",
+    "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
@@ -25,7 +25,8 @@
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "typescript-cookie": "^1.0.6"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
